[project]
name = "news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "fastapi-decorators>=1.0.19",
    "gensim>=4.4.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "langchain>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "matplotlib>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "pyldavis>=3.4.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
    "wordcloud>=1.9.4",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.coverage.run]
concurrency = ["greenlet"]
omit = [
    "*/tests/*",
    "*/AnalyzerAgent/*",
    "*/__pycache__/*",
]
